--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -6,6 +6,9 @@ on:
 jobs:
   githubregistry:
     name: Push to GitHub Registry
+    strategy:
+      matrix:
+        platforms: ["linux/amd64", "linux/arm64"]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -33,4 +36,6 @@ jobs:
           context: .
           push: true
           tags: ghcr.io/${{ env.REPOSITORY_NAME }}:${{ env.BRANCH_NAME }}
-          platforms: linux/amd64, linux/arm64
+          platforms: ${{ matrix.platform }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
