--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -8,7 +8,7 @@ jobs:
     name: Push to GitHub Registry
     strategy:
       matrix:
-        platforms: ["linux/amd64", "linux/arm64"]
+        platforms: ["linux/amd64", "linux/arm64", "linux/arm64/v8"]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
