--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -10,9 +10,8 @@ jobs:
       matrix:
         platform:
           - linux/amd64
-          - linux/arm/v6
-          - linux/arm/v7
           - linux/arm64
+          - linux/arm64/v7
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
